--- a/KuranX.App/Core/ResourceXaml/popupDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/popupDesing.xaml
@@ -88,7 +88,7 @@
         <Setter Property="FontSize" Value="10" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsSemiBold}" />
         <Setter Property="Background" Value="{x:Null}" />
-        <Setter Property="BorderBrush" Value="#ACACAC" />
+        <Setter Property="BorderBrush" Value="#ADB5BD" />
         <Setter Property="Margin" Value="0 5 0 0" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Padding" Value="10 0 10 0" />
@@ -182,6 +182,30 @@
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
                 <Setter Property="Foreground" Value="#FD7E14" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="subjectHeaderColorSelected" TargetType="CheckBox">
+
+        <Setter Property="Width" Value="36" />
+        <Setter Property="Height" Value="36" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="BorderBrush" Value="{x:Null}" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="7 0 7 0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border Background="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" CornerRadius="5" BorderThickness="2" BorderBrush="{Binding BorderBrush}">
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsChecked" Value="True">
+                <Setter Property="BorderBrush" Value="#FFACACAC" />
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -301,9 +325,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border Margin="10" Style="{DynamicResource defaultBorderShadowEffect}" Background="{TemplateBinding Background}">
+                    <Border Margin="10" Style="{DynamicResource defaultBorderShadowEffect}" Background="{TemplateBinding Background}" Width="220">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <TextBlock Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}"  FontSize="14" FontFamily="{DynamicResource PoppinsRegular}" Foreground="{TemplateBinding Foreground}" />
+                            <TextBlock MaxWidth="180" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}"  FontSize="14" FontFamily="{DynamicResource PoppinsRegular}" Foreground="{TemplateBinding Foreground}" />
                             <Icon:PackIconEvaIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Right" Width="14" Height="14" Margin="10 0 0 0" />
                         </StackPanel>
                     </Border>
@@ -374,6 +398,39 @@
                 <Setter Property="Cursor" Value="Hand" />
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="dynamicItemShowSperator" TargetType="Separator">
+
+        <Setter Property="Width" Value="435" />
+        <Setter Property="Background" Value="#FFACACAC" />
+        <Setter Property="Margin" Value="0 5 0 5" />
+    </Style>
+
+    <Style x:Key="wordHeader" TargetType="TextBlock">
+
+        <Setter Property="Width" Value="200" />
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsSemiBold}" />
+        <Setter Property="Foreground" Value="#1C1E2F" />
+        <Setter Property="FontSize" Value="16" />
+    </Style>
+
+    <Style x:Key="wordDetail" TargetType="TextBlock">
+
+        <Setter Property="Width" Value="220" />
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="Foreground" Value="#383C41" />
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="TextWrapping" Value="Wrap" />
+        <Setter Property="Margin" Value="5 0 5 0" />
+    </Style>
+
+    <Style x:Key="wordStack" TargetType="StackPanel">
+
+        <Setter Property="Orientation" Value="Horizontal" />
+        <Setter Property="Margin" Value="0 10 0 10" />
     </Style>
 
     <!-- DynamicStyle -->
