--- a/KuranX.App/Core/Windows/AdminScreen.xaml
+++ b/KuranX.App/Core/Windows/AdminScreen.xaml
@@ -10,8 +10,9 @@
     <Grid>
         <Button x:Name="addVerses" Content="Add Verses" HorizontalAlignment="Left" Margin="32,43,0,0" VerticalAlignment="Top" Height="35" Width="126" Click="add_verses" />
         <Button x:Name="addVerse" Content="Add Verse" HorizontalAlignment="Left" Margin="32,91,0,0" VerticalAlignment="Top" Height="39" Width="124" Click="add_verse" />
-        <Button x:Name="button1" Content="Test" HorizontalAlignment="Left" Margin="33,230,0,0" VerticalAlignment="Top" Height="39" Width="124" Click="test_click" />
+        <Button x:Name="button1" Content="Test" HorizontalAlignment="Left" Margin="32,361,0,0" VerticalAlignment="Top" Height="39" Width="124" Click="test_click" />
         <Button x:Name="addVerse_Copy" Content="Add Interpreter" HorizontalAlignment="Left" Margin="32,148,0,0" VerticalAlignment="Top" Height="39" Width="124" Click="add_interpreter" />
         <Button x:Name="addVerse_Copy1" Content="Verse Fixed" HorizontalAlignment="Left" Margin="169,90,0,0" VerticalAlignment="Top" Height="39" Width="124" Click="fixed_verse" />
+        <Button x:Name="addWord" Content="Add Words" HorizontalAlignment="Left" Margin="32,217,0,0" VerticalAlignment="Top" Height="39" Width="124" Click="add_word" />
     </Grid>
 </Window>
